src/VPC_20211129_1.yaml
AWSTemplateFormatVersion: '2010-09-09'
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      Tags:
      - Key: Name
        Value: s-zabbix-training-vpc
      - Key: SystemName
        Value: s-zabbix
      - Key: Env
        Value: training
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: s-zabbix-training-igw
      - Key: SystemName
        Value: s-zabbix
      - Key: Env
        Value: training
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    DependsOn: AttachGateway
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: s-zabbix-training-rt-pub-a
      - Key: SystemName
        Value: s-zabbix
      - Key: Env
        Value: training
  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  PublicSubnetA:
    Type: AWS::EC2::Subnet
    DependsOn: AttachGateway
    Properties:
      CidrBlock: 10.0.0.0/24
      AvailabilityZone: "ap-northeast-1a"
      MapPublicIpOnLaunch: 'true'
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: s-zabbix-training-sn-pub-a
      - Key: SystemName
        Value: s-zabbix
      - Key: Env
        Value: training
  PublicSubnetARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetA
      RouteTableId: !Ref PublicRouteTable
  NatGatewayEIP:    
    Type: AWS::EC2::EIP
    DependsOn: AttachGateway
    Properties:
      Domain: vpc
  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - NatGatewayEIP
          - AllocationId
      SubnetId: !Ref PublicSubnetA
      Tags:
      - Key: Name
        Value: s-zabbix-training-natgw
      - Key: SystemName
        Value: s-zabbix
      - Key: Env
        Value: training
  PrivateRouteTableA:
    Type: AWS::EC2::RouteTable
    DependsOn: NatGateway 
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: s-zabbix-training-rt-pri-a
      - Key: SystemName
        Value: s-zabbix
      - Key: Env
        Value: training
  PrivateRouteA:
    Type: AWS::EC2::Route
    DependsOn: NatGateway
    Properties:
      RouteTableId: !Ref PrivateRouteTableA
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway
  PrivateSubnetA:
    Type: AWS::EC2::Subnet
    DependsOn: AttachGateway
    Properties:
      CidrBlock: 10.0.10.0/24
      AvailabilityZone: "ap-northeast-1a"
      MapPublicIpOnLaunch: 'false'
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: s-zabbix-training-sn-pri-a
      - Key: SystemName
        Value: s-zabbix
      - Key: Env
        Value: training
  PrivateSubnetARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnetA
      RouteTableId: !Ref PrivateRouteTableA
  PrivateRouteTableC:
    Type: AWS::EC2::RouteTable
    DependsOn: AttachGateway
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: s-zabbix-training-rt-pri-c
      - Key: SystemName
        Value: s-zabbix
      - Key: Env
        Value: training
  PrivateSubnetC:
    Type: AWS::EC2::Subnet
    DependsOn: AttachGateway
    Properties:
      CidrBlock: 10.0.11.0/24
      AvailabilityZone: "ap-northeast-1c"
      MapPublicIpOnLaunch: 'false'
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: s-zabbix-training-sn-pri-c
      - Key: SystemName
        Value: s-zabbix
      - Key: Env
        Value: training
  PrivateSubnetCRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnetC
      RouteTableId: !Ref PrivateRouteTableC
  PubNacl:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref VPC
      Tags: 
      - Key: Name
        Value: s-zabbix-training-acl-pub
      - Key: SystemName
        Value: s-zabbix
      - Key: Env
        Value: training
  PubNaclAssoc:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties: 
      NetworkAclId: !Ref PubNacl
      SubnetId: !Ref PublicSubnetA
  PubNaclEntryInbound:
    Type: AWS::EC2::NetworkAclEntry
    Properties: 
      Egress: false
      RuleNumber: 100
      RuleAction: allow
      Protocol: -1
      CidrBlock: 0.0.0.0/0
      NetworkAclId: !Ref PubNacl
  PubNaclEntryOutbound:
    Type: AWS::EC2::NetworkAclEntry
    Properties: 
      Egress: true
      RuleNumber: 100
      RuleAction: allow
      Protocol: -1
      CidrBlock: 0.0.0.0/0
      NetworkAclId: !Ref PubNacl
  PriNacl:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref VPC
      Tags: 
      - Key: Name
        Value: s-zabbix-training-acl-pri
      - Key: SystemName
        Value: s-zabbix
      - Key: Env
        Value: training
  PriANaclAAssoc:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties: 
      NetworkAclId: !Ref PriNacl
      SubnetId: !Ref PrivateSubnetA
  PriANaclCAssoc:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties: 
      NetworkAclId: !Ref PriNacl
      SubnetId: !Ref PrivateSubnetC
  PriNaclEntryInbound:
    Type: AWS::EC2::NetworkAclEntry
    Properties: 
      Egress: false
      RuleNumber: 100
      RuleAction: allow
      Protocol: -1
      CidrBlock: 0.0.0.0/0
      NetworkAclId: !Ref PriNacl
  PriNaclEntryOutbound:
    Type: AWS::EC2::NetworkAclEntry
    Properties: 
      Egress: true
      RuleNumber: 100
      RuleAction: allow
      Protocol: -1
      CidrBlock: 0.0.0.0/0
      NetworkAclId: !Ref PriNacl
  WebSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Websecurity
      GroupName: s-zabbix-training-sg-web
      VpcId: !Ref VPC
      Tags: 
      - Key: Name
        Value: s-zabbix-training-sg-web
      - Key: SystemName
        Value: s-zabbix
      - Key: Env
        Value: training
  ZabbixSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: zabbixsecurity
      GroupName: s-zabbix-training-sg-main
      SecurityGroupIngress:
            -
              IpProtocol: tcp
              FromPort : 80
              ToPort : 80
              CidrIp: 0.0.0.0/0
            -
              IpProtocol: tcp
              FromPort : 443
              ToPort : 443
              CidrIp: 0.0.0.0/0
            -
              IpProtocol: tcp
              FromPort : 10051
              ToPort : 10051
              SourceSecurityGroupId: !Ref  WebSecurityGroup 
      VpcId: !Ref VPC
      Tags: 
      - Key: Name
        Value: s-zabbix-training-sg-main
      - Key: SystemName
        Value: s-zabbix
      - Key: Env
        Value: training
  WebSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      FromPort: 10050
      ToPort: 10050
      SourceSecurityGroupId: !GetAtt ZabbixSecurityGroup.GroupId
      GroupId: !GetAtt WebSecurityGroup.GroupId
  DBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: DBsecurity
      GroupName: s-zabbix-training-sg-db
      SecurityGroupIngress:
            -
              IpProtocol: tcp
              FromPort : 3306
              ToPort : 3306
              SourceSecurityGroupId: !Ref  ZabbixSecurityGroup
      VpcId: !Ref VPC
      Tags: 
      - Key: Name
        Value: s-zabbix-training-sg-db
      - Key: SystemName
        Value: s-zabbix
      - Key: Env
        Value: training

Outputs:
  VPC:
    Value: !Ref VPC
    Export:
      Name: VPC
  PublicSubnetA:
    Value: !Ref PublicSubnetA
    Export:
      Name: PublicSubnetA 
  PrivateSubnetA:
    Value: !Ref PrivateSubnetA
    Export:
      Name: PrivateSubnetA
  PrivateSubnetC:
    Value: !Ref PrivateSubnetC
    Export:
      Name: PrivateSubnetC
  WebSecurityGroup:
    Value: !Ref WebSecurityGroup
    Export:
      Name: WebSecurityGroup
  ZabbixSecurityGroup:
    Value: !Ref ZabbixSecurityGroup
    Export:
      Name: ZabbixSecurityGroup
  DBSecurityGroup:
    Value: !Ref DBSecurityGroup
    Export:
      Name: DBSecurityGroup
